<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              tools:context=".QueryCreditCardOfCCBActivity">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/appTitle"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/appTip"/>


    <EditText
            android:id="@+id/creditId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            ></EditText>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""/>

    <RadioGroup
            android:id="@+id/radioActions"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            >

        <RadioButton
                android:id="@+id/currentBill"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/currentBill"
                ></RadioButton>

        <RadioButton
                android:id="@+id/leftMoney"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/leftMoney"
                ></RadioButton>

        <RadioButton
                android:id="@+id/limit"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/limit"
                ></RadioButton>

        <RadioButton
                android:id="@+id/scores"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:text="@string/scores"
                ></RadioButton>
    </RadioGroup>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""/>

    <Button
            android:id="@+id/btnSendText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendText"
            ></Button>


</LinearLayout>
